--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  api_cache_manager : ^1.0.2
+  snippet_coder_utils: ^1.0.12
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  pin_code_fields: ^7.4.0
 
 dev_dependencies:
   flutter_test:
@@ -60,9 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
